--- a/src/presentation/pages/login/login-styles.scss
+++ b/src/presentation/pages/login/login-styles.scss
@@ -20,7 +20,7 @@ input[type="password"] {
   border: none;
 
   &:focus {
-    outline-color: $white;
+    outline: none;
   }
 }
 
@@ -66,24 +66,6 @@ button {
       color: $black;
       font-size: 20px;
       text-align: center;
-    }
-
-    .inputWrap {
-      display: flex;
-      margin-top: 16px;
-      position: relative;
-      align-items: center;
-
-      input {
-        flex: 1;
-      }
-
-      .status {
-        cursor: help;
-        font-size: 12px;
-        position: absolute;
-        right: 8px;
-      }
     }
 
     .submit {
