refactor: remove spinner inside button

--- a/src/presentation/components/form-status/form-status-styles.scss
+++ b/src/presentation/components/form-status/form-status-styles.scss
@@ -5,9 +5,12 @@
   display: flex;
   flex-direction: column;
 
-  .error {
-    color: $black;
+  .spinner {
     margin-top: 32px;
-    font-size: 16px;
+  }
+
+  .error {
+    margin-top: 32px;
+    color: $primaryLight;
   }
 }
