feat: add initial barbecue list view

--- a/src/presentation/pages/login/login-styles.scss
+++ b/src/presentation/pages/login/login-styles.scss
@@ -1,6 +1,6 @@
 @import "@/presentation/styles/colors.scss";
 
-.login {
+.loginWrap {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
