--- a/src/presentation/pages/signup/signup-styles.scss
+++ b/src/presentation/pages/signup/signup-styles.scss
@@ -1,6 +1,6 @@
 @import "@/presentation/styles/colors.scss";
 
-.signup {
+.signupWrap {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
