--- a/src/presentation/components/header/header-styles.scss
+++ b/src/presentation/components/header/header-styles.scss
@@ -8,3 +8,13 @@
     font-size: 32px;
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .header {
+    height: 10vh;
+
+    h2 {
+      font-size: 24px;
+    }
+  }
+}
