--- a/src/presentation/pages/barbecue-list/barbecue-list-styles.scss
+++ b/src/presentation/pages/barbecue-list/barbecue-list-styles.scss
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    max-width: 800px;
     width: 100%;
     padding: 24px;
 
@@ -26,19 +27,19 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        flex-basis: 48%;
-        margin: 16px;
+        flex-basis: 30%;
+        margin-bottom: 16px;
+        box-shadow: 6px 10px 27px -10px rgba(0,0,0,0.48);
 
         .barbecueContent {
           background-color: #FFF;
-          border: none;
-          box-shadow: 6px 10px 27px -10px rgba(0,0,0,0.48);
+          border: none;          
           display: flex;
           flex-direction: column;
-          flex-wrap: wrap;      
+          flex-grow: 1;
+          justify-content: space-between;
           overflow: hidden;
-          padding: 8px;
-          width: 200px;          
+          padding: 8px;        
           position: relative; 
           
           .date {
@@ -69,5 +70,19 @@
       }
     }
 
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .barbecueListWrap {  
+    .contentWrap {
+      ul {
+        flex-direction: column;
+
+        li {
+            flex-basis: 100%;
+        }
+      }
+    }
   }
 }
