feat: add skeleton shimmer effect

--- a/src/presentation/pages/barbecue-list/barbecue-list-styles.scss
+++ b/src/presentation/pages/barbecue-list/barbecue-list-styles.scss
@@ -31,6 +31,40 @@
         margin-bottom: 16px;
         box-shadow: 6px 10px 27px -10px rgba(0,0,0,0.48);
 
+        &:empty {
+          position: relative;
+          overflow: hidden;
+          background-repeat: no-repeat;
+          background-image: 
+            linear-gradient(to right, #CCC, #CCC),
+            linear-gradient(to right, #CCC, #CCC),
+            linear-gradient(to right, #CCC, #CCC),
+            linear-gradient(to right, #CCC, #CCC);
+          background-position: 
+            8px 8px,
+            8px 42px,
+            8px 90px,
+            140px 90px;
+          background-size: 
+            66px 30px,
+            200px 22px,
+            50px 27px,
+            75px 27px;
+
+          &::after{
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            transform: translateX(-100%);
+            background-image: 
+              linear-gradient(to right, transparent, rgba($white, 0.3), transparent);
+            animation: shimmer 1.2s infinite;
+          }
+        }
+
         .barbecueContent {
           background-color: #FFF;
           border: none;          
@@ -84,5 +118,11 @@
         }
       }
     }
+  }
+}
+
+@keyframes shimmer {
+  100% {
+    transform: translateX(100%);
   }
 }
