feat: change BarbecueList error style

--- a/src/presentation/pages/barbecue-list/components/error/error-styles.scss
+++ b/src/presentation/pages/barbecue-list/components/error/error-styles.scss
@@ -1,3 +1,11 @@
 .errorWrap {
-  
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  padding: 40px;
+
+  span {
+    font-size: 20px;
+    text-align: center;
+  }
 }
