--- a/src/presentation/pages/barbecue-list/components/barbecue-list/barbecue-list-items-styles.scss
+++ b/src/presentation/pages/barbecue-list/components/barbecue-list/barbecue-list-items-styles.scss
@@ -1,8 +1,11 @@
+@import "@/presentation/styles/colors.scss";
+
 .listWrap {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
+  margin-top: -70px;
 }
 
 @media only screen and (max-width: 600px) {
