--- a/src/presentation/pages/barbecue-list/components/barbecue-item/barbecue-item-styles.scss
+++ b/src/presentation/pages/barbecue-list/components/barbecue-item/barbecue-item-styles.scss
@@ -1,36 +1,40 @@
 @import "@/presentation/styles/colors.scss";
 
 .barbecueItemWrap {
-  animation: ease-in 1s infinite;
-  height: 130px;
+  box-shadow: 6px 10px 27px -10px rgba(0,0,0,0.48);
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   flex-basis: 30%;
-  margin-bottom: 16px;
-  box-shadow: 6px 10px 27px -10px rgba(0,0,0,0.48);
+  height: 140px;
+  margin: 16px;
+  min-width: 200px;
 
   .barbecueContent {
-    background-color: #FFF;
+    background-color: $white;
     border: none;          
     display: flex;
     flex-direction: column;
     flex-grow: 1;
     justify-content: space-between;
     overflow: hidden;
-    padding: 8px;        
+    padding: 16px;
     position: relative; 
     
-    .date {
-      color: #000;
-      font-size: 25px;
-      font-weight: 800;
-      width: 100%;
-    }
-  
-    .description {
-      font-size: 18px;
-      font-weight: bold;
+    .details {
+      display: flex;
+      flex-direction: column;
+
+      .date {
+        color: #000;
+        font-size: 25px;
+        font-weight: 800;
+        width: 100%;
+      }
+    
+      .description {
+        font-size: 18px;
+        font-weight: bold;
+      }
     }
   
     .totals {
