--- a/src/presentation/pages/signup/signup-styles.scss
+++ b/src/presentation/pages/signup/signup-styles.scss
@@ -14,8 +14,14 @@
 
     h2 {
       color: $black;
-      font-size: 20px;
+      font-size: 26px;
       text-align: center;
+    }
+
+    .buttons {
+      display: inline-flex;
+      flex-direction: row;
+      justify-content: space-around;
     }
 
     .link {
