--- a/src/presentation/pages/barbecue-list/components/barbecue-item/barbecue-item-styles.scss
+++ b/src/presentation/pages/barbecue-list/components/barbecue-item/barbecue-item-styles.scss
@@ -4,7 +4,7 @@
   box-shadow: 6px 10px 27px -10px rgba(0,0,0,0.48);
   display: flex;
   flex-direction: column;
-  flex-basis: 30%;
+  flex-basis: 25%;
   height: 140px;
   margin: 16px;
   min-width: 200px;
@@ -40,7 +40,6 @@
     .totals {
       display: inline-flex;
       justify-content: space-between;
-      margin-top: 30px;
       
       span {
         font-size: 16px;
@@ -52,8 +51,14 @@
   }
 }
 
+@media only screen and (max-width: 960px) {
+  .barbecueItemWrap {
+    flex-basis: 40%;
+  }
+}
+
 @media only screen and (max-width: 600px) {
-  .barbecueItemWrap {  
+  .barbecueItemWrap {
     flex-basis: 100%;
   }
 }
