--- a/src/presentation/pages/barbecue-list/components/barbecue-new-item/barbecue-new-item-styles.scss
+++ b/src/presentation/pages/barbecue-list/components/barbecue-new-item/barbecue-new-item-styles.scss
@@ -4,8 +4,7 @@
   box-shadow: 6px 10px 27px -10px rgba(0,0,0,0.48);
   display: flex;
   flex-direction: column;
-  flex-basis: 30%;
-  justify-content: space-between;
+  flex-basis: 25%;
   height: 140px;
   margin: 16px;
   min-width: 200px;
@@ -20,8 +19,8 @@
     flex-grow: 1;
     justify-content: center;
     overflow: hidden;
-    padding: 8px;        
-    position: relative;
+    padding: 16px;
+    position: relative; 
     
     &:hover {
       background-color: #bdbdbd ;
@@ -46,8 +45,14 @@
   }
 }
 
+@media only screen and (max-width: 960px) {
+  .newItemWrap {
+    flex-basis: 40%;
+  }
+}
+
 @media only screen and (max-width: 600px) {
-  .newItemWrap {  
+  .newItemWrap {
     flex-basis: 100%;
   }
 }
