--- a/src/presentation/pages/signup/signup-styles.scss
+++ b/src/presentation/pages/signup/signup-styles.scss
@@ -22,6 +22,14 @@
       display: inline-flex;
       flex-direction: row;
       justify-content: space-around;
+      margin-top: 64px;
+
+      .optionText{
+        align-items: center;
+        display: flex;
+        font-size: 20px;
+        text-align: center;
+      }
     }
 
     .link {
