--- a/src/presentation/components/modal/modal-styles.scss
+++ b/src/presentation/components/modal/modal-styles.scss
@@ -30,5 +30,13 @@
       margin-bottom: 10px;
     }
   }
+}
 
+@keyframes animate {
+  0% {
+    transform: scale(0.5);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
