--- a/src/presentation/pages/barbecue-list/components/barbecue-item-empty/barbecue-item-empty-styles.scss
+++ b/src/presentation/pages/barbecue-list/components/barbecue-item-empty/barbecue-item-empty-styles.scss
@@ -1,15 +1,18 @@
 @import "@/presentation/styles/colors.scss";
 
 .barbecueItemEmpty {
-  height: 130px;
+  background-color: $white;  
+  box-shadow: 6px 10px 27px -10px rgba(0,0,0,0.48);
   display: flex;
   flex-direction: column;
+  flex-basis: 25%;
   justify-content: space-between;
-  flex-basis: 30%;
-  margin-bottom: 16px;
-  box-shadow: 6px 10px 27px -10px rgba(0,0,0,0.48);
+  height: 140px;
+  margin: 16px;
   position: relative;
   overflow: hidden;
+  min-width: 200px;
+
   background-repeat: no-repeat;
   background-image: 
     linear-gradient(to right, #CCC, #CCC),
@@ -20,12 +23,12 @@
     8px 8px,
     8px 42px,
     8px 90px,
-    140px 90px;
+    90% 90px;
   background-size: 
-    66px 30px,
-    200px 22px,
+    60px 30px,
+    90% 22px,
     50px 27px,
-    75px 27px;
+    50px 27px;
 
   &::after{
     content: '';
@@ -41,8 +44,14 @@
   }
 }
 
+@media only screen and (max-width: 960px) {
+  .barbecueItemEmpty {
+    flex-basis: 40%;
+  }
+}
+
 @media only screen and (max-width: 600px) {
-  .barbecueItemWrap {  
+  .barbecueItemEmpty {
     flex-basis: 100%;
   }
 }
