--- a/src/presentation/pages/participants-list/components/barbecue-info/barbecue-info-styles.scss
+++ b/src/presentation/pages/participants-list/components/barbecue-info/barbecue-info-styles.scss
@@ -7,6 +7,7 @@
   justify-content: space-between;
   margin: 10px;
   min-width: 100%;
+  position: relative;
 
   .info {
     display: flex;
@@ -42,5 +43,21 @@
       margin-left: 8px;
       font-weight: 800;
     }
+  }
+}
+
+.editButton {
+  background-color: $primary;
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  position: absolute;
+  top: -10px;
+  right: 20px;
+
+  &:hover {
+    transform: scale(1.1);
+    animation: normal 500ms infinite;
+    animation-duration: 500ms;
   }
 }
