--- a/src/presentation/components/header/header-styles.scss
+++ b/src/presentation/components/header/header-styles.scss
@@ -1,11 +1,28 @@
+@import "@/presentation/styles/colors.scss";
+
 .header {
   align-items: center;
   display: flex;
   height: 30vh;
   justify-content: center;
+  position: relative;
 
   h2 {
     font-size: 32px;
+  }
+
+  .exit {
+    background-color: $white;
+    border-radius: 50%;
+    height: 40px;
+    top: 10px;
+    right: 10px;
+    position: absolute;
+    width: 40px;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 }
 
@@ -15,6 +32,11 @@
 
     h2 {
       font-size: 24px;
+    }
+
+    .exit {
+      height: 30px;
+      width: 30px;
     }
   }
 }
