feat: ajusts on view participants

--- a/src/presentation/pages/participants-list/components/participants-list/participants-list-styles.scss
+++ b/src/presentation/pages/participants-list/components/participants-list/participants-list-styles.scss
@@ -8,9 +8,12 @@
     background-color: $white;
     border-collapse: collapse;
     flex-basis: auto;
+    font-size: 21px;
+    font-weight: bold;
     line-height: 32px;
     margin: 10px;
     table-layout: auto;
     vertical-align: middle;
   }
 }
+
