--- a/src/presentation/pages/participants-list/components/barbecue-info/barbecue-info-styles.scss
+++ b/src/presentation/pages/participants-list/components/barbecue-info/barbecue-info-styles.scss
@@ -39,9 +39,33 @@
     padding-right: 50px;
 
     span {
-      font-size: 14px;
-      margin-left: 8px;
+      font-size: 14px;      
       font-weight: 800;
+    }
+
+    .peoples {
+      .count {
+        margin-left: 8px;
+      }
+    }
+
+    .money {
+      display: inline-flex;
+      align-items: center;
+      justify-content: left;
+
+      .wrapMoney{
+        margin-left: 8px;
+        
+        .separate {
+          margin: 0 2px;
+          font-size: 12px;
+        }
+
+        .valueCollected{          
+          font-size: 12px;
+        }
+      }
     }
   }
 }
