--- a/src/presentation/pages/participants-list/participants-styles.scss
+++ b/src/presentation/pages/participants-list/participants-styles.scss
@@ -1,5 +1,7 @@
 @import "@/presentation/styles/colors.scss";
 
 .wrapParticipants {
-  min-width: 100%;
+  background-color: $white;
+  box-shadow: 0px 9px 46px -9px rgba(0,0,0,0.51);
+  margin-top: -50px;
 }
