feat: add icons on views

--- a/src/presentation/components/modal/modal-styles.scss
+++ b/src/presentation/components/modal/modal-styles.scss
@@ -32,8 +32,8 @@
     }
 
     .close {
-      background-color: $primaryLight;
       border-radius: 50%;
+      cursor: pointer;
       height: 20px;
       width: 20px;
       right: 5px;
