--- a/src/presentation/components/header/header-styles.scss
+++ b/src/presentation/components/header/header-styles.scss
@@ -12,9 +12,12 @@
   }
 
   .exit {
+    align-items: center;
     background-color: $white;
     border-radius: 50%;
+    display: flex;
     height: 40px;
+    justify-content: center;
     top: 10px;
     right: 10px;
     position: absolute;
@@ -35,8 +38,8 @@
     }
 
     .exit {
-      height: 30px;
-      width: 30px;
+      height: 35px;
+      width: 35px;
     }
   }
 }
