--- a/src/presentation/pages/barbecue-list/components/barbecue-item/barbecue-item-styles.scss
+++ b/src/presentation/pages/barbecue-list/components/barbecue-item/barbecue-item-styles.scss
@@ -42,6 +42,24 @@
     .totals {
       display: inline-flex;
       justify-content: space-between;
+
+      .people {
+        align-items: center;
+        display: flex;
+
+        .icon {
+          color: $primary;
+        }
+      }
+
+      .money {
+        align-items: center;
+        display: flex;
+
+        .icon {
+          color: $primary;
+        }
+      }
       
       span {
         font-size: 16px;
