--- a/src/presentation/pages/participants-list/components/barbecue-info/barbecue-info-styles.scss
+++ b/src/presentation/pages/participants-list/components/barbecue-info/barbecue-info-styles.scss
@@ -1,12 +1,10 @@
 @import "@/presentation/styles/colors.scss";
 
 .barbecue {
-  border: none;
-  display: inline-flex;
-  flex-wrap: wrap;
+  align-items: center;
+  display: flex;
   justify-content: space-between;
-  margin: 10px;
-  min-width: 100%;
+  width: 100%;
   position: relative;
 
   .info {
@@ -31,27 +29,35 @@
   }
 
   .totals {
+    align-items: flex-start;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     overflow: hidden;
-    padding-right: 50px;
+    padding: 10px;
 
     span {
       font-size: 21px;      
       font-weight: 800;
     }
 
+    .icon {
+      color: $primary;
+    }
+
     .peoples {
+      align-items: center;
+      display: flex;
+
       .count {
         margin-left: 8px;
       }
     }
 
     .money {
-      display: inline-flex;
       align-items: center;
+      display: flex;
       justify-content: left;
 
       .wrapMoney{
@@ -68,19 +74,38 @@
       }
     }
   }
+
+  .editButton {
+    align-items: center;
+    color: $black;
+    cursor: pointer;
+    display: flex;
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    position: absolute;
+    right: 5px;
+    top: 5px;
+  
+    &:hover {
+      transform: scale(1.1);
+      animation: normal 500ms infinite;
+      animation-duration: 500ms;
+    }
+  }
 }
 
-.editButton {
-  background-color: $primary;
-  height: 25px;
-  width: 25px;
-  border-radius: 50%;
-  position: absolute;
-  right: 20px;
+@media only screen and (max-width: 600px) {
+  .barbecue {
+    align-items: flex-start;
+    flex-direction: column;
+    position: relative;
+    width: 100%;
 
-  &:hover {
-    transform: scale(1.1);
-    animation: normal 500ms infinite;
-    animation-duration: 500ms;
+    .totals {
+      flex-direction: row;
+      justify-content: space-between;
+      width: 100%;      
+    }
   }
 }
