--- a/src/presentation/pages/ui/barbecue-form-styles.scss
+++ b/src/presentation/pages/ui/barbecue-form-styles.scss
@@ -19,7 +19,7 @@ textarea {
   border-radius: 4px;
   border: 1px solid $greyLight;
   line-height: 32px;
-  margin-top: 16px;
+  margin-top: 0;
 
   &:focus {
     outline: none;
@@ -40,12 +40,19 @@ textarea {
     width: auto;
   }
 
+  .textSuggest {
+    font-size: 20px;
+    margin: 10px;
+  }
+
   .suggest {
+    align-items: center;
     display: flex;
     flex-direction: row;
     justify-content: center;
     
     input {
+      margin-top: 0;
       text-align: center;
       width: 100px;
     }
