--- a/src/presentation/pages/participants-list/participants-styles.scss
+++ b/src/presentation/pages/participants-list/participants-styles.scss
@@ -5,4 +5,16 @@
   box-shadow: 0px 9px 46px -9px rgba(0,0,0,0.51);
   margin-top: -50px;
   padding: 10px;
+
+  button {
+    background-color: transparent;
+    border: 1px solid $black;
+    line-height: 20px;
+  }
+
+  .addParticipant {
+    color: $black;
+    margin: 5px;
+    font-size: 16px;
+  }  
 }
