--- a/src/presentation/pages/participants-list/components/participant-form/participant-form-styles.scss
+++ b/src/presentation/pages/participants-list/components/participant-form/participant-form-styles.scss
@@ -1,7 +1,5 @@
 @import "@/presentation/styles/colors.scss";
 
-input[type="email"],
-input[type="date"],
 input[type="text"] {
   border-radius: 4px;
   line-height: 40px;
@@ -14,8 +12,7 @@ input[type="text"] {
   }
 }
 
-input[type="number"],
-textarea {
+input[type="number"] {
   border-radius: 4px;
   border: 1px solid $greyLight;
   line-height: 32px;
@@ -31,30 +28,31 @@ textarea {
   flex-direction: inherit;
   text-align: center;
 
-  input,
-  textarea {
+  input {
     margin: 8px;
   }
 
-  .date {
-    width: auto;
-  }
-
-  .textSuggest {
+  span {
     font-size: 20px;
     margin: 10px;
   }
 
-  .suggest {
-    align-items: center;
+  .value {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    
+
     input {
       margin-top: 0;
       text-align: center;
       width: 100px;
+    }
+
+    .suggest {
+      align-items: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
   }
 
