--- a/src/presentation/pages/participants-list/components/participants-list/participants-list-styles.scss
+++ b/src/presentation/pages/participants-list/components/participants-list/participants-list-styles.scss
@@ -4,6 +4,12 @@
   display: flex;
   flex-direction: column;
 
+  .noParticipants {
+    display: inline;
+    text-align: center;
+    font-size: 26px;
+  }
+
   table {
     background-color: $white;
     border-collapse: collapse;
