--- a/src/presentation/pages/ui/barbecue-form/barbecue-form-styles.scss
+++ b/src/presentation/pages/ui/barbecue-form/barbecue-form-styles.scss
@@ -70,6 +70,7 @@ textarea {
     button {
       padding: 0px 10px;
       line-height: 35px;
+      outline: none;
     }
     
     button[type=submit] {
