--- a/src/presentation/pages/login/login-styles.scss
+++ b/src/presentation/pages/login/login-styles.scss
@@ -18,29 +18,23 @@
       text-align: center;
     }
 
-    .buttons {
-      display: inline-flex;
-      flex-direction: row;
-      justify-content: space-around;
-      margin-top: 64px;
+    .signup {
+      color: $black;
+      margin-top: 24px;
+      display: inline;
+      text-decoration: none;
+      
+      Link {
 
-      .optionText{
-        align-items: center;
-        display: flex;
-        font-size: 20px;
-        text-align: center;
+        &:hover {
+          text-decoration: underline;
+        }
       }
     }
 
-    .link {
-      color: $black;
-      cursor: pointer;
-      margin-top: 40px;
-      text-align: center;
-
-      &:hover {
-        text-decoration: underline;
-      }
+    .submit {
+      display: block;
+      margin-top: 48px;
     }
   }
 }
