--- a/src/presentation/pages/participants-list/participants-styles.scss
+++ b/src/presentation/pages/participants-list/participants-styles.scss
@@ -8,13 +8,13 @@
 
   button {
     background-color: transparent;
-    border: 1px solid $black;
+    cursor: pointer;
     line-height: 20px;
-  }
+    outline: none;
+    padding: 16px;
 
-  .addParticipant {
-    color: $black;
-    margin: 5px;
-    font-size: 16px;
-  }  
+    &:hover{
+      transform: scale(1.1);
+    }
+  }
 }
