--- a/src/presentation/pages/signup/signup-styles.scss
+++ b/src/presentation/pages/signup/signup-styles.scss
@@ -18,28 +18,25 @@
       text-align: center;
     }
 
-    .buttons {
-      display: inline-flex;
-      flex-direction: row;
-      justify-content: space-around;
-      margin-top: 64px;
-
-      .optionText{
-        align-items: center;
-        display: flex;
-        font-size: 20px;
-        text-align: center;
-      }
+    .submit {
+      display: block;
+      margin-top: 48px;
     }
 
-    .link {
-      color: $black;
-      cursor: pointer;
-      margin-top: 40px;
+    .login {
+      display: inline;
+      margin-top: 24px;
       text-align: center;
-
-      &:hover {
-        text-decoration: underline;
+      
+      .link {
+        color: $black;
+        cursor: pointer;
+        margin-top: 40px;
+        text-align: center;
+  
+        &:hover {
+          text-decoration: underline;
+        }
       }
     }
   }
