--- a/src/presentation/styles/global.scss
+++ b/src/presentation/styles/global.scss
@@ -1,7 +1,7 @@
 @import "@/presentation/styles/colors.scss";
 
 * {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 14px;
   padding: 0;
   margin: 0;
