feat: ensure click on pay status choose it

--- a/src/presentation/pages/participants-list/components/participant-item/participant-item-styles.scss
+++ b/src/presentation/pages/participants-list/components/participant-item/participant-item-styles.scss
@@ -11,9 +11,10 @@ td, th {
   vertical-align: inherit;
 }
 
-.f {
-  table-layout: fixed;
+.statusPayment {
+  cursor: pointer;
   justify-content: center;
+  table-layout: fixed;
   width: 25px;
 }
 
