--- a/src/presentation/pages/participants-list/components/participant-item/participant-item-styles.scss
+++ b/src/presentation/pages/participants-list/components/participant-item/participant-item-styles.scss
@@ -49,7 +49,8 @@ td, th {
   text-align: center;
 }
 
-.editAction{
+.editAction,
+.removeAction {
   cursor: pointer;
   text-align: center;
   width: auto;
