--- a/src/presentation/pages/participants-list/components/barbecue-info/barbecue-info-styles.scss
+++ b/src/presentation/pages/participants-list/components/barbecue-info/barbecue-info-styles.scss
@@ -7,12 +7,22 @@
   width: 100%;
   position: relative;
 
+  .goBack {
+    cursor: pointer;
+    color: $black;
+    position: absolute;
+    top: -3px;
+    left: -3px;
+  }
+
   .info {
     display: flex;
     flex-direction: column;
     justify-content: center;
     flex-wrap: wrap;
     overflow: hidden;
+    margin-top: 10px;
+    margin-left: 10px;
     padding: 10px;
     
     .date {
