--- a/src/presentation/pages/participants-list/components/barbecue-info/barbecue-info-styles.scss
+++ b/src/presentation/pages/participants-list/components/barbecue-info/barbecue-info-styles.scss
@@ -4,16 +4,9 @@
   align-items: center;
   display: flex;
   justify-content: space-between;
+  margin-top: 30px;
   width: 100%;
   position: relative;
-
-  .goBack {
-    cursor: pointer;
-    color: $black;
-    position: absolute;
-    top: -3px;
-    left: -3px;
-  }
 
   .info {
     display: flex;
