--- a/src/presentation/pages/participants-list/participants-styles.scss
+++ b/src/presentation/pages/participants-list/participants-styles.scss
@@ -1,10 +1,19 @@
 @import "@/presentation/styles/colors.scss";
 
+
 .wrapParticipants {
   background-color: $white;
   box-shadow: 0px 9px 46px -9px rgba(0,0,0,0.51);
   margin-top: -50px;
   padding: 10px;
+  position: relative;
+  
+  .goBack {
+    color: $black;
+    position: absolute;
+    top: -3px;
+    left: -3px;
+  }
 
   button {
     background-color: transparent;
