--- a/src/presentation/pages/barbecue-list/components/barbecue-item/barbecue-item-styles.scss
+++ b/src/presentation/pages/barbecue-list/components/barbecue-item/barbecue-item-styles.scss
@@ -1,6 +1,8 @@
 @import "@/presentation/styles/colors.scss";
 
 .barbecueItemWrap {
+  background-color: $white;
+  border: none;      
   box-shadow: 6px 10px 27px -10px rgba(0,0,0,0.48);
   display: flex;
   flex-direction: column;
@@ -8,66 +10,12 @@
   height: 140px;
   margin: 16px;
   min-width: 200px;
-
-  .barbecueContent {
-    background-color: $white;    
-    border: none;      
-    color: $black;    
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-    justify-content: space-between;
-    overflow: hidden;
-    padding: 16px;
-    position: relative;
-    text-decoration: none;
-
-    .details {
-      display: flex;
-      flex-direction: column;
-
-      .date {
-        color: #000;
-        font-size: 25px;
-        font-weight: 800;
-        width: 100%;
-      }
-    
-      .description {
-        font-size: 18px;
-        font-weight: bold;
-      }
-    }
+  overflow: hidden;
+  position: relative;
   
-    .totals {
-      display: inline-flex;
-      justify-content: space-between;
-
-      .people {
-        align-items: center;
-        display: flex;
-
-        .icon {
-          color: $primary;
-        }
-      }
-
-      .money {
-        align-items: center;
-        display: flex;
-
-        .icon {
-          color: $primary;
-        }
-      }
-      
-      span {
-        font-size: 16px;
-        text-align: center;
-        padding: 4px;
-        vertical-align: super;
-      }
-    }
+  .link {        
+    text-decoration: none;
+    flex: 1;
   }
 }
 
