--- a/src/presentation/pages/participants-list/participants-styles.scss
+++ b/src/presentation/pages/participants-list/participants-styles.scss
@@ -15,6 +15,12 @@
     left: -3px;
   }
 
+  .loading {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+
   button {
     background-color: transparent;
     cursor: pointer;
