--- a/src/presentation/components/modal/modal-styles.scss
+++ b/src/presentation/components/modal/modal-styles.scss
@@ -36,12 +36,25 @@
       cursor: pointer;
       height: 20px;
       width: 20px;
-      right: 5px;
-      top: 5px;
+      right: 2px;
+      top: 2px;
       position: absolute;
 
       &:hover {
         transform: scale(1.1);
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .modal {
+    .inputWrap {
+      max-width: 90%;
+
+      .title {
+        font-size: 24px;
+        margin-bottom: 5px;
       }
     }
   }
