fix: responsive layout

--- a/src/presentation/pages/participants-list/components/barbecue-info-empty/barbecue-info-empty-styles.scss
+++ b/src/presentation/pages/participants-list/components/barbecue-info-empty/barbecue-info-empty-styles.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   justify-content: space-between;
   flex-basis: 30%;
-  margin-bottom: 16px;
+  margin-top: 30px;
   position: relative;
   overflow: hidden;
   background-repeat: no-repeat;
@@ -15,16 +15,17 @@
     linear-gradient(to right, #CCC, #CCC),
     linear-gradient(to right, #CCC, #CCC),
     linear-gradient(to right, #CCC, #CCC);
+    
   background-position: 
-    4% 10px,
-    5% 50px,
-    84% 10px,
-    88% 50px;
+    3% 10px,
+    3% 60px,
+    86.5% 10px,
+    97% 50px;
   background-size: 
     100px 30px,
-    200px 22px,
-    50px 30px,
-    75px 30px;
+    200px 40px,
+    80px 30px,
+    150px 30px;
 
   &::after{
     content: '';
@@ -43,5 +44,23 @@
 @keyframes shimmer {
   100% {
     transform: translateX(100%);
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .emptyBarbecue {
+    height: 180px;
+    margin-top: 30px;
+      
+    background-position: 
+      3% 10px,
+      3.5% 60px,
+      3% 120px,
+      97% 120px;
+    background-size: 
+      100px 30px,
+      200px 40px,
+      80px 30px,
+      150px 30px;
   }
 }
