--- a/src/presentation/pages/ui/barbecue-form/barbecue-form-styles.scss
+++ b/src/presentation/pages/ui/barbecue-form/barbecue-form-styles.scss
@@ -54,7 +54,7 @@ textarea {
     input {
       margin-top: 0;
       text-align: center;
-      width: 100px;
+      max-width: 80px;
     }
   }
 
