--- a/src/presentation/pages/participants-list/components/barbecue-info-empty/barbecue-info-empty-styles.scss
+++ b/src/presentation/pages/participants-list/components/barbecue-info-empty/barbecue-info-empty-styles.scss
@@ -17,10 +17,10 @@
     linear-gradient(to right, #CCC, #CCC);
     
   background-position: 
-    3% 10px,
-    3% 60px,
-    86.5% 10px,
-    97% 50px;
+    15px 10px,
+    15px 60px,
+    calc(100% - 80px) 10px,
+    calc(100% - 10px) 50px;
   background-size: 
     100px 30px,
     200px 40px,
@@ -49,7 +49,7 @@
 
 @media only screen and (max-width: 600px) {
   .emptyBarbecue {
-    height: 180px;
+    height: 160px;
     margin-top: 30px;
       
     background-position: 
