--- a/src/presentation/pages/participants-list/components/barbecue-info/barbecue-info-styles.scss
+++ b/src/presentation/pages/participants-list/components/barbecue-info/barbecue-info-styles.scss
@@ -129,7 +129,7 @@
   .barbecue {
     align-items: flex-start;
     flex-direction: column;
-    height: 180px;
+    height: 160px;
     position: relative;
     width: 100%;
 
@@ -141,7 +141,8 @@
 
     .totals {
       flex-direction: row;
-      justify-content: space-between;     
+      justify-content: space-between;
+      width: 100%;   
     }
   }
 }
