--- a/src/presentation/pages/participants-list/components/participant-form/participant-form-styles.scss
+++ b/src/presentation/pages/participants-list/components/participant-form/participant-form-styles.scss
@@ -45,7 +45,7 @@ input[type="number"] {
     input {
       margin-top: 0;
       text-align: center;
-      width: 100px;
+      max-width: 80px;
     }
 
     .suggest {
@@ -53,7 +53,7 @@ input[type="number"] {
       color: $greyDark;
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: center;      
     }
 
     .sumSuggest {
